--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>ADDED BY MASTER</h1>
     <h2>ADD BY 70067900</h2>
     <h3>ADD BY 70068818</h3>
+    <form action="" method="post">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name">
+    </form>
 </body>
 </html>
