--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <form action="" method="post">
         <label for="name">Name</label>
         <input type="text" name="name" id="name">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password">
     </form>
 </body>
 </html>
