--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="text" name="name" id="name">
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
